--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "Landing": {
     "Logo": {
-      "Tooltip": "View Profile",
+      "Tooltip": "Home",
       "AltText": "Me as Avatar 😊"
     }
   },
