--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,7 +1,7 @@
 {
   "Landing": {
     "Logo": {
-      "Tooltip": "Ver Perfil",
+      "Tooltip": "Inicio",
       "AltText": "Yo como Avatar 😊"
     }
   },
